Closed Bug 520316 Opened 15 years ago Closed 15 years ago

###!!! ASSERTION: Wrong view: '!wrapper || wrapper->GetView() == this', file /home/jwalden/moz/2/view/src/nsView.cpp, line 757

Categories

(Core :: Web Painting, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta2-fixed

People

(Reporter: Waldo, Assigned: roc)

References

()

Details

(Keywords: assertion)

Attachments

(1 file)

Debug build from this push, with some irrelevant changes atop it:

changeset:   33401:0187a51241b7
tag:         qparent
user:        Daniel Holbert <dholbert@cs.stanford.edu>
date:        Fri Oct 02 14:37:25 2009 -0700
summary:     Bug 474049: Add support for SMIL animation of CSS properties in SVG. r=birtles sr=roc

###!!! ASSERTION: Wrong view: '!wrapper || wrapper->GetView() == this', file /home/jwalden/moz/2/view/src/nsView.cpp, line 757
nsIView::DetachWidgetEventHandler(nsIWidget*) (/home/jwalden/moz/2/view/src/nsView.cpp:758)
nsObjectFrame::StopPluginInternal(int) (/home/jwalden/moz/2/layout/generic/nsObjectFrame.cpp:2198)
nsObjectFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsObjectFrame.cpp:621)
nsLineBox::DeleteLineList(nsPresContext*, nsLineList&) (/home/jwalden/moz/2/layout/generic/nsLineBox.cpp:335)
nsBlockFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsBlockFrame.cpp:303)
nsLineBox::DeleteLineList(nsPresContext*, nsLineList&) (/home/jwalden/moz/2/layout/generic/nsLineBox.cpp:335)
nsBlockFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsBlockFrame.cpp:303)
nsFrameList::DestroyFrames() (/home/jwalden/moz/2/layout/generic/nsFrameList.cpp:81)
nsContainerFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsContainerFrame.cpp:271)
CanvasFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsHTMLFrame.cpp:120)
nsFrameList::DestroyFrames() (/home/jwalden/moz/2/layout/generic/nsFrameList.cpp:81)
nsContainerFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsContainerFrame.cpp:271)
nsHTMLScrollFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsGfxScrollFrame.cpp:162)
nsFrameList::DestroyFrames() (/home/jwalden/moz/2/layout/generic/nsFrameList.cpp:81)
nsContainerFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsContainerFrame.cpp:271)
ViewportFrame::Destroy() (/home/jwalden/moz/2/layout/generic/nsViewportFrame.cpp:71)
nsFrameManager::Destroy() (/home/jwalden/moz/2/layout/base/nsFrameManager.cpp:291)
PresShell::Destroy() (/home/jwalden/moz/2/layout/base/nsPresShell.cpp:1928)
DocumentViewerImpl::DestroyPresShell() (/home/jwalden/moz/2/layout/base/nsDocumentViewer.cpp:4351)
DocumentViewerImpl::Destroy() (/home/jwalden/moz/2/layout/base/nsDocumentViewer.cpp:1575)
DocumentViewerImpl::Show() (/home/jwalden/moz/2/layout/base/nsDocumentViewer.cpp:1882)
nsPresContext::EnsureVisible() (/home/jwalden/moz/2/layout/base/nsPresContext.cpp:1592)
PresShell::UnsuppressAndInvalidate() (/home/jwalden/moz/2/layout/base/nsPresShell.cpp:4624)
PresShell::UnsuppressPainting() (/home/jwalden/moz/2/layout/base/nsPresShell.cpp:4667)
DocumentViewerImpl::LoadComplete(unsigned int) (/home/jwalden/moz/2/layout/base/nsDocumentViewer.cpp:1064)
nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, unsigned int) (/home/jwalden/moz/2/docshell/base/nsDocShell.cpp:5748)
nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, unsigned int) (/home/jwalden/moz/2/docshell/base/nsDocShell.cpp:5625)
nsDocLoader::FireOnStateChange(nsIWebProgress*, nsIRequest*, int, unsigned int) (/home/jwalden/moz/2/uriloader/base/nsDocLoader.cpp:1314)
nsDocLoader::doStopDocumentLoad(nsIRequest*, unsigned int) (/home/jwalden/moz/2/uriloader/base/nsDocLoader.cpp:937)
nsDocLoader::DocLoaderIsEmpty(int) (/home/jwalden/moz/2/uriloader/base/nsDocLoader.cpp:804)
nsDocLoader::OnStopRequest(nsIRequest*, nsISupports*, unsigned int) (/home/jwalden/moz/2/uriloader/base/nsDocLoader.cpp:700)
nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, unsigned int) (/home/jwalden/moz/2/netwerk/base/src/nsLoadGroup.cpp:680)
nsDocument::DoUnblockOnload() (/home/jwalden/moz/2/content/base/src/nsDocument.cpp:7096)
nsDocument::UnblockOnload(int) (/home/jwalden/moz/2/content/base/src/nsDocument.cpp:7042)
nsDocument::DispatchContentLoadedEvents() (/home/jwalden/moz/2/content/base/src/nsDocument.cpp:4021)
nsRunnableMethod<nsDocument, void>::Run() (/home/jwalden/moz/2/dbg/content/base/src/../../../dist/include/nsThreadUtils.h:265)
nsThread::ProcessNextEvent(int, int*) (/home/jwalden/moz/2/xpcom/threads/nsThread.cpp:527)
NS_ProcessNextEvent_P(nsIThread*, int) (/home/jwalden/moz/2/dbg/xpcom/build/nsThreadUtils.cpp:230)
nsBaseAppShell::Run() (/home/jwalden/moz/2/widget/src/xpwidgets/nsBaseAppShell.cpp:169)
nsAppStartup::Run() (/home/jwalden/moz/2/toolkit/components/startup/src/nsAppStartup.cpp:182)
XRE_main (/home/jwalden/moz/2/toolkit/xre/nsAppRunner.cpp:3420)
main (/home/jwalden/moz/2/browser/app/nsBrowserApp.cpp:156)
__libc_start_main (/usr/src/debug/glibc-2.10.1-69-gaa152ec/csu/libc-start.c:252)
_start (/home/jwalden/moz/2/dbg/dist/bin/firefox-bin)
Assignee: nobody → roc
Flags: wanted1.9.2?
I don't see this on Mac. What are your steps to reproduce, just load the data: URL and close the window?
Lots of our tests trigger this assertion on Windows at least.
Flags: in-testsuite+
Attached patch fixSplinter Review
Trivial fix. The widget is attached to mInnerView and we use mInnerView->DetachWidgetEventHandler everywhere else.
Attachment #405208 - Flags: review?(dbaron)
Whiteboard: [needs review]
Whiteboard: [needs review] → [needs landing]
Flags: wanted1.9.2? → wanted1.9.2+
http://hg.mozilla.org/mozilla-central/rev/5297f553d91c
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 192 approval]
I missed comment 1, but yeah, I believe load-and-close (or load-and-navigate) was all that was necessary to trigger it.  Original testcase was hacks.m.o, one of whose posts at the time had an embed in it which, when reduced that far, triggered the assertion.
Comment on attachment 405208 [details] [diff] [review]
fix

a1.9.2=dbaron
Attachment #405208 - Flags: approval1.9.2? → approval1.9.2+
Whiteboard: [needs 192 approval] → [needs 192 landing]
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: