Bug 520316. Call DetachWidgetEventHandler on the right view. r=dbaron